feat: Initialize EAS configuration and define Android package name.

--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
       "permissions": [
         "NOTIFICATIONS",
         "SCHEDULE_EXACT_ALARM"
-      ]
+      ],
+      "package": "com.munnawar.XeroEstate"
     },
     "web": {
       "output": "static",
@@ -48,6 +49,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "2ab53ce1-d117-486a-8e12-8d8323e4c0f7"
+      }
     }
   }
 }
