--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "icon": "./src/assets/images/icon.png",
     "scheme": "xeroestate",
     "userInterfaceStyle": "automatic",
+    "jsEngine": "hermes",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true
